stoat/src/snapshots/stoat__test_harness__snapshot_workspace_symbol_input.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: insert
size: 40x12
---
[0m[1m[7m[34mf[0m[1m[34mn[0m[97m [0m[33mfoo[0m[37m()[0m[97m [0m[37m{}[0m
[0m[33m┌ workspace symbol ┐[0m
[0m[33m│[0m[7m [0m                 [0m[33m│[0m
[0m[33m└──────────────────┘[0m







[0m[1m[30m[42m INS [0m[1m[97m[100m lsp-did-open-test [0m[97m[100mmain.rs     1:1 [0m
