stoat/src/snapshots/stoat__test_harness__space_mode.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: space
focused: #1 of 1
mode: space
size: 80x24
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;99;109;131m[48;2;40;44;52m┌ space ───────────────────────────────────────────────────────────────────────┐[0m
[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52mC-?, ?[0m[38;2;250;250;250m[48;2;40;44;52m   toggle the keybinding hints o…   [0m[38;2;86;182;194m[48;2;40;44;52mr[0m[38;2;250;250;250m[48;2;40;44;52m   re-read every open file-backe… [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m   Esc[0m[38;2;250;250;250m[48;2;40;44;52m   normal mode                      [0m[38;2;86;182;194m[48;2;40;44;52mg[0m[38;2;250;250;250m[48;2;40;44;52m   space_goto mode                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     q[0m[38;2;250;250;250m[48;2;40;44;52m   close pane or exit               [0m[38;2;86;182;194m[48;2;40;44;52mG[0m[38;2;250;250;250m[48;2;40;44;52m   space_git mode                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     a[0m[38;2;250;250;250m[48;2;40;44;52m   space_pane_nav mode              [0m[38;2;86;182;194m[48;2;40;44;52mW[0m[38;2;250;250;250m[48;2;40;44;52m   walkthrough mode               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     t[0m[38;2;250;250;250m[48;2;40;44;52m   open the run-command prompt      [0m[38;2;86;182;194m[48;2;40;44;52mR[0m[38;2;250;250;250m[48;2;40;44;52m   review mode                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     c[0m[38;2;250;250;250m[48;2;40;44;52m   spawn claude                     [0m[38;2;86;182;194m[48;2;40;44;52md[0m[38;2;250;250;250m[48;2;40;44;52m   open a diff of working-tree c… [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     w[0m[38;2;250;250;250m[48;2;40;44;52m   space_workspace mode             [0m[38;2;86;182;194m[48;2;40;44;52ms[0m[38;2;250;250;250m[48;2;40;44;52m   save current position to jump… [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     b[0m[38;2;250;250;250m[48;2;40;44;52m   space_buffer mode                [0m[38;2;86;182;194m[48;2;40;44;52mj[0m[38;2;250;250;250m[48;2;40;44;52m   jump backward in jumplist      [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     l[0m[38;2;250;250;250m[48;2;40;44;52m   space_lsp mode                   [0m[38;2;86;182;194m[48;2;40;44;52mk[0m[38;2;250;250;250m[48;2;40;44;52m   jump forward in jumplist       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     "[0m[38;2;250;250;250m[48;2;40;44;52m   space_clipboard mode             [0m[38;2;86;182;194m[48;2;40;44;52m/[0m[38;2;250;250;250m[48;2;40;44;52m   open workspace code search     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     p[0m[38;2;250;250;250m[48;2;40;44;52m   open the file finder             [0m[38;2;86;182;194m[48;2;40;44;52m'[0m[38;2;250;250;250m[48;2;40;44;52m   reopen the most recently open… [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;99;109;131m[48;2;40;44;52m└──────────────────────────────────────────────────────────────────────────────┘[0m
[0m[38;2;40;44;52m[48;2;99;109;131m SPC [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) [scratch] [0m[38;2;99;109;131m[48;2;99;109;131m─────────────────────────────────────────────────[0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
